Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -151,7 +151,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "ename": "SyntaxError",
@@ -203,7 +205,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "name"
+    "name = "
    ]
   },
   {
